--- a/formulario.html
+++ b/formulario.html
@@ -38,42 +38,42 @@
         </dl>
     </header>
 
-    <div>
-        <form>
-            <label> Nome: </label>
+    <div id="form">
+        <form id="container">
+            <h2> Preencha seu currículo: </h2> 
+            <label class="form-items"> Nome: <input type="text"> </label>
+            <br>
+            <label class="form-items"> E-mail: </label>
             <input type="text">
             <br>
-            <label> E-mail</label>
-            <input type="text">
-            <br>
-            <label> Telefone</label>
+            <label class="form-items"> Telefone: </label>
             <input type="number">
             <br>
-            <label> Endereço </label>
+            <label class="form-items"> Endereço: </label>
             <input type="text">
             <br>
-            <label class="habilidades"> Habilidades</label>
+            <label class="form-items"> Habilidades: </label>
             <input class="habilidades" type="text">
             
-            <label class="habilidades" for="Nível"></label>
+            <label class="habilidades"> Nível: </label>
             <input class="habilidades" type="range" min="1" max="100" value="50" class="slider" id="habilidades-range">
             <br>
-            <label class="idiomas"> Idiomas</label>
+            <label class="form-items"> Idiomas: </label>
             <input class="idiomas"type="text">
             
-            <label class="idiomas"> Nível</label>
+            <label class="idiomas"> Nível: </label>
             <input class="idiomas" type="range" min="1" max="100" value="50" class="slider" id="idiomas-range">
             <br>
-            <label class="qualidades"> Qualidades</label>
+            <label class="form-items"> Qualidades: </label>
             <input class="qualidades" type="text">
 
-            <label class="qualidades"> Nível</label>
+            <label class="qualidades"> Nível: </label>
             <input class="qualidades" type="range" min="1" max="100" value="50" class="slider" id="idiomas-range">
             <br>
-            <label> Experiência</label>
+            <label class="form-items"> Experiência: </label>
             <input type="text">
             <br>
-            <label> Formação</label>
+            <label class="form-items"> Formação: </label>
             <input type="text">
             <br>
         </form>
