--- a/formulario.html
+++ b/formulario.html
@@ -36,23 +36,23 @@
                 <br>
 
                 <label> E-mail: </label>
-                <input type="text">
+                <input type="email">
                 <br>
 
                 <label> Telefone: </label>
-                <input type="number">
+                <input type="tel">
                 <br>
 
                 <label> Endereço: </label>
                 <input type="text">
                 <br>
 
-                <label > Experiência: </label>
-                <input type="text">
+                <label class="complemento"> Experiência: </label>
+                <textarea rows="3" cols="25"> </textarea>
                 <br>
                 
-                <label > Formação: </label>
-                <input type="text">
+                <label class="complemento"> Formação: </label>
+                <textarea rows="3" cols="25"> </textarea>
                 <br>
 
                 <label> Habilidades: </label>
@@ -72,6 +72,8 @@
                 <label> Nível: </label>
                 <input type="range" min="1" max="100" value="50" class="slider" id="idiomas-range">
                 <br>
+
+                <input type="submit" id="botao-enviar">
             </form>
         </div>
     </body>
