--- a/trabalho.html
+++ b/trabalho.html
@@ -26,63 +26,62 @@
     <div class="grid-container">
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            O Tal do Cleitinho, robacena E00666
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
 
         <div class="grid-item">
-            <div class="descricao-img">O Tal do Cleitinho, robacena E00666</div>
-
+            Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
         </div>
     </div>
