--- a/curriculo.html
+++ b/curriculo.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/trabalho.css">
     <link rel="stylesheet" href="css/curriculo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="bootstrap/css/simple-grid.min.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,50 +30,49 @@
         </ul>
     </header>
     <div id="curriculo">
-
         <main>
             <h1> Oh Tal do Cleythinn </h1>
-            <div class="quadrado-dados">
+
+            <div id="container">
                 <span class="quadrado-texto">Experiência</span>
+                <h2>Experiência 2</h2>
+                <span> 2012 - 2010</span>
+                <br> <br>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
+                    sed animi recusandae impedit voluptates accusamus nesciunt F
+                </span>
+
+                <h2>Experiência 1</h2>
+                <span> 2009 - 2011</span>
+                <br> <br>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
+                    sed animi recusandae impedit voluptates accusamus nesciunt
+                </span>
+
             </div>
-            <hr class="quadrado-dados">
-            <h2>Último experiência</h2>
-            <span> 2010 - 2020</span>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
-                sed animi recusandae impedit voluptates accusamus nesciunt
-            </span>
 
-            <h2>Experiência 2</h2>
-            <span> 2012 - 2010</span>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
-                sed animi recusandae impedit voluptates accusamus nesciunt
-            </span>
-
-            <h2>Experiência 1</h2>
-            <span> 2009 - 2011</span>
-            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
-                sed animi recusandae impedit voluptates accusamus nesciunt
-            </span>
-
-            <div class="quadrado-dados">
+            <div id="container">
                 <span class="quadrado-texto">Formação</span>
+                <h2>Técnico em Informática</h2>
+                <br>
+                <span> 2017 - 2018</span>
+                <br>
+                <span>Curso de Técnico em Informática - Escola Técnica Divina Providência
+                </span>
+
+                <h2>Ciência da Computação</h2>
+                <br>
+                <span> 2019 - 2023</span>
+                <br>
+                <span>Aluno do curso de Ciência da Computação no 5º período na EMGE - Escola de Engenharia
+                    de Minas Gerais, Belo Horizonte, Minas Gerais, Brasil
+                </span>
             </div>
-            <hr class="quadrado-dados">
-            <h2>Técnico em Informática</h2>
-            <span> 2017 - 2018</span>
-            <span>Curso de Técnico em Informática - Escola Técnica Divina Providência
-            </span>
 
-            <h2>Ciência da Computação</h2>
-            <span> 2019 - 2023</span>
-            <span>Aluno do curso de Ciência da Computação no 5º período na EMGE - Escola de Engenharia
-                de Minas Gerais, Belo Horizonte, Minas Gerais, Brasil
-            </span>
-
-        </main>
+        
+    </main>
 
         <aside>
-
             <div id="fundo-foto">
 
             </div>
@@ -80,7 +80,7 @@
             <div id="fundo-dados">
                 <span>
                     ohtalcleityn@uol.com.br
-                    (31)94002-8922
+                    3194002-8922
                     Esmeraldas, MG
                 </span>
             </div>
@@ -90,6 +90,7 @@
             <span></span>
 
         </aside>
+
 
     </div>
 
