--- a/curriculo.html
+++ b/curriculo.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/trabalho.css">
     <link rel="stylesheet" href="css/curriculo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="bootstrap/css/simple-grid.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,69 +29,167 @@
             </li>
         </ul>
     </header>
-    <div id="curriculo">
-        <main>
-            <h1> Oh Tal do Cleythinn </h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-6 parte1">
+                <h1> Oh Tal do Cleythinn </h1>
+                <div class="row">
+                    <div class="col-4">
 
-            <div id="container">
-                <span class="quadrado-texto">Experiência</span>
-                <h2>Experiência 2</h2>
-                <span> 2012 - 2010</span>
-                <br> <br>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
-                    sed animi recusandae impedit voluptates accusamus nesciunt F
-                </span>
+                    <div class="quadrado-texto">Experiência</div>
 
-                <h2>Experiência 1</h2>
-                <span> 2009 - 2011</span>
-                <br> <br>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa dolores
-                    sed animi recusandae impedit voluptates accusamus nesciunt
-                </span>
+                    </div>
+                    <div class="col-8">
+                        <div class="dados-inseridos">
+                        <h2>Experiência 2</h2>
+                        <span> 2012 - 2010</span>
+                        <br> <br>
+                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa
+                            dolores
+                            sed animi recusandae impedit voluptates accusamus nesciunt F
+                        </span>
 
+                        <h2>Experiência 1</h2>
+                        <span> 2009 - 2011</span>
+                        <br> <br>
+                        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure enim dolor cumque esse culpa
+                            dolores
+                            sed animi recusandae impedit voluptates accusamus nesciunt
+                        </span>
+                        <br>
+                    </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+
+                    <div class="quadrado-texto">Formação</div>
+                    </div>
+                    <div class="col-8">
+                        <div class="dados-inseridos">
+                        <h2>Técnico em Informática</h2>
+                        <br>
+                        <span> 2017 - 2018</span>
+                        <br>
+                        <span>Curso de Técnico em Informática - Escola Técnica Divina Providência
+                        </span>
+
+                        <h2>Ciência da Computação</h2>
+                        <br>
+                        <span> 2019 - 2023</span>
+                        <br>
+                        <span>Aluno do curso de Ciência da Computação no 5º período na EMGE - Escola de Engenharia
+                            de Minas Gerais, Belo Horizonte, Minas Gerais, Brasil
+                        </span>
+                    </div>
+                    </div>
+                </div>
             </div>
 
-            <div id="container">
-                <span class="quadrado-texto">Formação</span>
-                <h2>Técnico em Informática</h2>
-                <br>
-                <span> 2017 - 2018</span>
-                <br>
-                <span>Curso de Técnico em Informática - Escola Técnica Divina Providência
-                </span>
+            <div class="col-6 parte2">
 
-                <h2>Ciência da Computação</h2>
-                <br>
-                <span> 2019 - 2023</span>
-                <br>
-                <span>Aluno do curso de Ciência da Computação no 5º período na EMGE - Escola de Engenharia
-                    de Minas Gerais, Belo Horizonte, Minas Gerais, Brasil
-                </span>
+                <div class="row">
+                    <div id="fundo-foto">
+
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div id="dados-contato">
+                        <span> ohtalcleityn@uol.com.br </span>
+                        <br>
+                        <span>3194002-8922</span>
+                        <br>
+                        <span>Esmeraldas, MG</span>
+                    </div>
+
+                    <h2>Habilidades</h2>
+                    <div class="col-8 porc">
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+                    </div>
+                    <div class="col-4 desc">
+
+                        <div id="habilidades">
+                            <span>Dart</span>
+                            <br>
+                            <span>MySQL</span>
+                            <br>
+                            <span>HTML</span>
+                            <br>
+                            <span>Java</span>
+                            <br>
+                            <span>Python</span>
+                            <br>
+                            <span>Pacote Office</span>
+                            <br>
+                            <span>Photoshop</span>
+                            <br>
+                            <span>CSS</span>
+                        </div>
+                    </div>
+                </div>
+                <h2>Linguagens</h2>
+                <div class="row">
+                    <div class="col-8 porc">
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                        <div class="hab"></div>
+
+                    </div>
+                    <div class="col-4 desc">
+
+                        <div id="habilidades">
+                            <span>Português</span>
+                            <br>
+                            <span>Inglês</span>
+                            <br>
+                            <span>Espanhol</span>
+                            <br>
+                            <span>Francês</span>
+                        </div>
+                    </div>
+                </div>
+                <h2>Qualidades</h2>
+                <div class="row qualidades">
+
+                    <div class="col-6 porc">
+                        <span>Aprendizado</span>
+                        <div class="grafico"></div>
+
+                        <span>Colaboratividade</span>
+                        <div class="grafico"></div>
+                    </div>
+
+                    <div class="col-6 desc">
+                        <span>Concentração</span>
+                        <div class="grafico"></div>
+
+                        <span>Flexibilidade</span>
+                        <div class="grafico"></div>
+                    </div>
+
+
+                </div>
             </div>
-
-        
-    </main>
-
-        <aside>
-            <div id="fundo-foto">
-
-            </div>
-
-            <div id="fundo-dados">
-                <span>
-                    ohtalcleityn@uol.com.br
-                    3194002-8922
-                    Esmeraldas, MG
-                </span>
-            </div>
-
-            <h3>Habilidades</h3>
-
-            <span></span>
-
-        </aside>
-
-
+        </div>
     </div>
 
 </body>
