--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/trabalho.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Currículo</title>
 </head>
@@ -10,7 +10,7 @@
     <header>
         <ul>
             <li class="nav_item">
-                <a href="trabalho.html"><i class="material-icons md-18">house</i><span>Home</span></a>
+                <a href="home.html"><i class="material-icons md-18">house</i><span>Home</span></a>
             </li>
 
             <li class="nav_item">
@@ -26,63 +26,87 @@
     <div class="grid-container">
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
 
         <div class="grid-item">
+            <a href="curriculo.html" class="link-curriculo">
             Oh Tal do Cleythinn E00666
             <img class="img" src="img/otaldocleitinho.png" alt="Currículo exemplo">
+        </a>
         </div>
     </div>
     <footer>
