--- a/curriculo.html
+++ b/curriculo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/trabalho.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/curriculo.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="bootstrap/css/bootstrap-grid.css">
@@ -16,7 +16,7 @@
     <header>
         <ul>
             <li class="nav_item">
-                <a href="trabalho.html"><i class="material-icons md-18">house</i><span>Home</span></a>
+                <a href="home.html"><i class="material-icons md-18">house</i><span>Home</span></a>
             </li>
 
             <li class="nav_item">
@@ -90,7 +90,7 @@
 
                 <div class="row">
                     <div id="fundo-foto">
-
+                        <img src="img/clieton.png">
                     </div>
                 </div>
 
