--- a/sobre.html
+++ b/sobre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="css/trabalho.css">
+        <link rel="stylesheet" href="css/home.css">
         <link rel="stylesheet" href="css/sobre.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <meta charset="UTF-8">
@@ -13,7 +13,7 @@
         <header>
             <ul>
                 <li class="nav_item">
-                    <a href="trabalho.html"><i class="material-icons md-18">house</i><span>Home</span></a>
+                    <a href="home.html"><i class="material-icons md-18">house</i><span>Home</span></a>
                 </li>
     
                 <li class="nav_item">
